--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -58,7 +58,7 @@
 }
 .home_form_div{
     background-color: white;
-    box-shadow: 0px 0px 4px gainsboro;
+    box-shadow: 0px 0px 10px rgb(202, 202, 202);
     border-radius: 5px;
     padding: 20px;
     width: 350px;
@@ -78,11 +78,26 @@
    color: #2E58A6;
 
 }
+.captcha{
+    /* width: 250px ; */
+    margin: 0px auto;
+}
+.rc-anchor-normal{
+    /* width: 250px !important; */
+    /* text-align: center !important; */
+    /* margin: 0px auto !important; */
+}
+.rc-anchor-normal .rc-anchor-pt{
+    /* width: 250px !important; */
+}
+.rc-anchor-normal .rc-anchor-content{
+    width: 90px !important;
+}
 .home_form_btn{
     background-color: #2E58A6;
     color: white;
     text-align: center;
-    padding: 7px 25px;
+    padding: 7px 35px;
     outline: none;
     border: none;
     margin-top: 10px;
@@ -113,17 +128,17 @@
 ._home_video_div{
     text-align: center;
     margin-top: 30px;
-    width: 850px;
+    width: 77%;
     margin: 50px auto;
 }
 ._home_video_div p{
     margin-top: 20px;
   color: #2E58A6;
-  font-size: .9rem;
+  font-size: .95rem;
     
 }
 ._home_video_div img{
-    width: 450px;
+    width: 600px;
     margin-top: 20px;
 }
 
@@ -147,7 +162,7 @@
         margin-left: 0px;
     }
 }
-@media screen and (max-width:500px){
+@media screen and (max-width:620px){
     ._home_video_div img{
         width: 100%;
     }
