--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,17 @@
 }
 
 input , select,textarea{
-  box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
+  box-shadow: inset 0 1px 2px rgba(83, 83, 83, 0.39), 0 -1px 0px #FFF, 0 1px 0 #FFF;
+  border-radius: 5px;
+}
+input::placeholder , select::placeholder,textarea::placeholder{
+  color: #7095db;
+}
+*{
+  box-sizing: border-box;
+}
+body{
+  font-family: 'Poppins', sans-serif;
 }
 
 /* cookie  */
