--- a/src/Pages/Blogs/Blog.css
+++ b/src/Pages/Blogs/Blog.css
@@ -64,11 +64,12 @@
   color: #2E58A6;
   font-size: 0.9em;
   margin-top: 8px;
-  padding: 6px 15px !important;
+  padding: 6px 35px !important;
   border-radius: 3px;
 }
 .upcoming_data {
   font-size: 0.8em;
+  font-weight: 400 !important;
   color: white;
 }
 .slick-dots li button:before{
@@ -80,6 +81,11 @@
 }
 .upcoming_head>strong{
   color: white;
+  font-size: 1.5em;
+}
+
+.blog_card_heading{
+  color: #2E58A6;
 }
 /* social feed comp  */
 
