--- a/src/Layout/style.css
+++ b/src/Layout/style.css
@@ -1,8 +1,9 @@
 .web_logo{
     width: 90px;
+    height: 60px;
 }
 .custom_nav{
-    padding: 15px 50px;
+    padding: 15px 40px;
     
 }
 .nav_container{
@@ -13,11 +14,11 @@
     z-index: 1111;
 }
 .nav_ul{
-    margin-left: 50px;
+    margin-left: 30px;
 }
 .nav-link{
     color:  #2E58A6 !important;
-    margin-left: 40px ;
+    margin-left: 30px ;
 }
 .navbar-light .navbar-toggler{
     border: none !important;
@@ -67,6 +68,7 @@
 }
 .form_head{
     color: #2E58A6;
+    font-weight: 600;
 }
 .footer_form input,.footer_form textarea{
     outline: none;
@@ -97,22 +99,32 @@
     display: flex;
     margin: 0px auto;
     justify-content: space-between;
+    /* height: 122px; */
+
 }
 .copy_right_container{
     
-    padding: 15px;
+    padding: 10px;
     background-color: #2E58A6;
 }
 .social_links{
     list-style: none;
     display: flex;
-    /* align-items: center; */
+    align-items: center;
     justify-content: space-between;
     padding-left: 0px;
     margin-bottom: 0px;
+    width: 150px;
+}
+.contct_path_line{
+    width: 90px;
+}
+.insta_icon{
+    margin-top: 5px;
 }
 .contact_link_ul_ h5{
     color: white;
+    font-size: .9rem;
     margin-bottom: 0px;
 }
 .copy_right_div{
@@ -123,29 +135,39 @@
     color: white;
     /* margin-top: 50px; */
     margin-bottom: 0px;
+    font-size: .85rem;
+    font-weight: 300;
+    margin-top: -20px;
 }
 .foter_link{
     text-decoration: none;
     color: white;
+    font-size: .9rem;
+    font-weight: 400;
 }
 .foter_link:hover{
     color: white;
 }
 .term_link_div div{
     color: white;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .sub_nav_container{
     background-color: #F0F4FC;
-    padding: 10px 0px;
+    padding: 15px 0px;
     margin-top: 10px;
     position: sticky;
-    top: 120px;
+    top: 90px;
     z-index: 11;
+    background: #F0F4FC 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+
 }
-.sub_nav_container h2{
-    margin-left: 150px;
+.sub_nav_container h4{
+    margin-left: 130px;
+    font-weight: bold;
+    margin-bottom: 0px;
 }
 @media screen and (max-width:1070px){
     .footer_form input,.footer_form textarea{
@@ -185,7 +207,11 @@
     .footer_form input,.footer_form textarea{
         width: 100%;
     }
+    .sub_nav_container h4{
+        margin-left: 50px;
+    }
 }
+
 @media screen and (max-width:600px){
     .copy_right_main_div{
         flex-wrap: wrap;
@@ -194,6 +220,13 @@
     .custom_nav{
         padding: 10px ;
     }
+    .copy_right_div p{
+        margin-top: 0px;
+    }
+    /* .copy_right_main_div{
+        flex-direction: column;
+        justify-content: center;
+    } */
 }
 @media screen and (max-width:450px){
     .link_ul{
@@ -214,5 +247,8 @@
     }
     .term_link_div div,.copy_right_div{
         margin-top: 10px;
+    }
+    .sub_nav_container h4{
+        margin-left: 20px;
     }
 }
