--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -17,7 +17,7 @@
 }
 
 .about_left_content1 {
-  width: 50%;
+  width: 68%;
   height: 100%;
 }
 
@@ -26,8 +26,12 @@
   font-weight: bold;
 }
 
+.about_left_content1 h4 {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
 .about_left_content1 p {
-  font-size: 0.95rem;
+  font-size: 0.9rem;
   text-align: start;
   color: #2E58A6;
 }
@@ -50,7 +54,7 @@
 }
 
 .about_left_content2 {
-  width: 50%;
+  width: 60%;
   height: 100%;
   /* margin-top: 40px; */
 }
@@ -65,6 +69,8 @@
 
 .about_left_content2 h2 {
   font-size: 2rem;
+  color: #0A1433;
+  font-weight: bold;
   /* text-align: right; */
 }
 
@@ -83,7 +89,7 @@
 }
 
 .about_right_content2 > img {
-  margin-left: 170px;
+  margin-left: 35px;
   width: 50%;
 }
 .jc_cus {
@@ -93,14 +99,16 @@
 /* get app  */
 
 .home_commingsoon {
-  width: 65%;
+  width: 60%;
   margin: 20px auto;
   height: max-content;
   padding: 1rem 40px;
-  margin-bottom: 2rem;
-  background-color: #F0F4FC;
+  margin-bottom: 4rem;
+  /* background-color: #F0F4FC; */
   border-radius: 10px;
   padding-bottom: 0px;
+  background: #F0F4FC 0% 0% no-repeat padding-box;
+  padding-right: 0px;
 }
 
 .hc_box {
@@ -110,15 +118,17 @@
   display: flex;
   padding: 20px 0px;
   border-radius: 20px;
-  /* padding-bottom: 0px; */
+  padding-bottom: 0px;
 }
 
 .hcb_left {
-  width: 60%;
+  width: 65%;
 }
 
-.hcb_left h2 {
-  font-size: 2rem;
+.hcb_left h4 {
+  color: #0A1433;
+
+  font-size: 1.6rem;
   font-weight: bold;
   margin-bottom: 1.5rem;
 }
@@ -127,8 +137,11 @@
   color: white;
   border: none;
   outline: none;
-  padding: 6px 25px;
+  padding: 6px 35px;
   border-radius: 3px;
+}
+.sign_up_todayBtn img{
+  margin-left: 10px;
 }
 .hcb_left p {
   font-size: 1rem;
@@ -141,6 +154,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 15px;
 }
 
 .hcb_left div span {
@@ -167,10 +181,11 @@
     flex-direction: column-reverse;
     justify-content: center;
     text-align: center;
-
+   
   }
   .home_commingsoon{
     padding-bottom: 20px;
+    padding-right: 40px;
   }
   .hcb_left{
     text-align: center;
