--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -18,7 +18,7 @@
     position: relative;
 }
 .tree_img{
-    margin-top: 20px;
+    margin-top: 15px;
     width: 100%;
 }
 .road_img{
@@ -48,26 +48,39 @@
     justify-content: center;
     width: 90%;
     margin: 0px auto;
-    padding-top: 40px;
+    padding-top: 30px;
 }
 .animation_para_div{
-    width: 500px;
+    width: 566px;
+}
+.animation_para_div h3{
+    font-weight: bold;
+    color: #0A1433;
 }
 .animation_para_div p{
     color: #2E58A6;
 }
 .home_form_div{
     background-color: white;
-    box-shadow: 0px 0px 10px rgb(202, 202, 202);
+    /* box-shadow: 0px 0px 10px rgb(202, 202, 202); */
+    box-shadow: 0px 3px 10px #00000029;
+
     border-radius: 5px;
     padding: 20px;
+    padding-top: 17px;
     width: 350px;
     margin-left: 80px;
     position: relative;
     z-index: 999;
     text-align: center;
 }
+.home_form_div >p{
+    font-weight:600;
+    font-size: 1.2em;
+    margin-bottom: 0px;
+    /* font: normal normal 600 25px/35px Poppins; */
 
+}
 .home_form_div input,.home_form_div select{
     width: 300px;
     border: none;
@@ -82,14 +95,7 @@
     /* width: 250px ; */
     margin: 0px auto;
 }
-.rc-anchor-normal{
-    /* width: 250px !important; */
-    /* text-align: center !important; */
-    /* margin: 0px auto !important; */
-}
-.rc-anchor-normal .rc-anchor-pt{
-    /* width: 250px !important; */
-}
+
 .rc-anchor-normal .rc-anchor-content{
     width: 90px !important;
 }
@@ -122,7 +128,7 @@
     color: #2E58A6;
 }
 .home_form_div label{
-    margin-top: 20px;
+    margin-top: 10px;
     text-align: start;
 }
 ._home_video_div{
@@ -131,10 +137,16 @@
     width: 77%;
     margin: 50px auto;
 }
+._home_video_div h3{
+    font-weight: bold;
+    color: #0A1433;
+}
 ._home_video_div p{
     margin-top: 20px;
   color: #2E58A6;
   font-size: .95rem;
+  font: normal normal normal .9rem Poppins;
+
     
 }
 ._home_video_div img{
